@@ -1,4 +1,4 @@
-/* $Id: send_raw_old.c,v 1.9.4.3.2.1 2008/11/11 15:19:48 uehira Exp $ */
+/* $Id: send_raw_old.c,v 1.9.4.3.2.2 2008/11/23 10:01:10 uehira Exp $ */
 /*
     program "send_raw_old/send_mon_old.c"   1/24/94 - 1/25/94,5/25/94 urabe
                                     6/15/94 - 6/16/94
@@ -49,7 +49,7 @@
 
 #define DEBUG     0
 #define MAXMESG   1024
-#define SR_MON    5
+/* #define SR_MON    5 */
 #define BUFNO     128
 
 int sock,raw,mon,tow,psize[BUFNO],n_ch;
